--- a/css/article.css
+++ b/css/article.css
@@ -6,7 +6,7 @@
         padding-top: 100px;
         padding-bottom:120px;
     }
-    @media only screen and (max-width: 991px) {
+    @media (max-width: 991px) {
         .article--space {
             padding-top: 75px;
             padding-bottom:90px;
