--- a/css/footer.css
+++ b/css/footer.css
@@ -23,7 +23,7 @@
 	color: rgb(0, 196, 196);
 }
 
-@media only screen and (max-width: 576px) {
+@media (max-width: 576px) {
 	.footer{
 		flex-direction: column;
 		height: 150px;
