--- a/css/text.css
+++ b/css/text.css
@@ -12,12 +12,12 @@
     font-size: 90px;
     font-weight: 700;
 }
-@media only screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
     .text__heading{
         font-size: 80px;
     }
 }
-@media only screen and (max-width: 576px) {
+@media (max-width: 576px) {
     .text__heading{
         font-size: 60px;
     }
