--- a/css/article.css
+++ b/css/article.css
@@ -12,6 +12,12 @@
             padding-bottom:90px;
         }
     }
+    @media (max-width: 576px) {
+        .article--space {
+            padding-top: 50px;
+            padding-bottom:60px;
+        }
+    }
     .article--full{
         min-height: 100vh;
     }
