--- a/css/text.css
+++ b/css/text.css
@@ -22,6 +22,11 @@
         font-size: 60px;
     }
 }
+@media (max-width: 320px) {
+    .text__heading, .text__title{
+        font-size: 40px;
+    }
+}
     .text__heading--small {
         font-size: 40px;
     }
