--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -12,4 +12,9 @@
     grid-template-columns: repeat(12, 1fr);
     width: 100%;
 }
-
+@media (max-width: 576px) {
+    .wrapper {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+}
