--- a/css/blog.css
+++ b/css/blog.css
@@ -77,8 +77,7 @@
 	font-weight: 700;
 	text-decoration: none;
 }
-.blog__a:hover,
-.blog__a:focus{
+.blog__a:hover{
 	color: #FF6033;
 	text-decoration: underline;
 }
