--- a/css/footer.css
+++ b/css/footer.css
@@ -18,8 +18,7 @@
 	font-weight: 700;
 	text-decoration: none;
 }
-.footer a:hover,
-.footer a:focus{
+.footer a:hover{
 	color: rgb(0, 196, 196);
 }
 
