--- a/css/page.css
+++ b/css/page.css
@@ -1,8 +1,8 @@
-.page{
-
+html{
+    scroll-behavior: smooth;
 }
 
-    .page__about-picture {
+.page__about-picture {
         grid-column: span 6;
     }
     .page__about-description {
