--- a/css/button.css
+++ b/css/button.css
@@ -24,6 +24,11 @@
         transition: background 0.5s;
     }
 
+    .button:focus{
+        outline: 2px #e00 dashed;
+        outline-offset: 2px;
+    }
+
     .button::-moz-focus-inner {
         border: 0;
     }
