--- a/css/scroll-fixed.css
+++ b/css/scroll-fixed.css
@@ -14,3 +14,8 @@
 	50%		{transform: scale(1.3);}
 	100%	{transform: scale(1);}
 }
+@media (max-width: 768px) {
+	.scroll-fixed {
+		display: none !important;
+	}
+}
