--- a/css/service.css
+++ b/css/service.css
@@ -29,3 +29,16 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+@media (max-width: 320px) {
+    .service__name {
+        font-size: 16px;
+    }
+    .service {
+        height: 80px;
+    }
+    .service__img{
+        max-width: 80%;
+        max-height: 80%;
+    }
+}
